syntax = "proto3";

option go_package = "model";
option java_package = "com.ishida.workrec.pb";

import "google/protobuf/timestamp.proto";

message WorkListPb {
  repeated WorkListItemPb works = 1;
  string next_page_token = 2;
}

message WorkListItemPb {
  enum State {
    STATE_UNSPECIFIED = 0;
	  UNSTARTED = 1;
	  STARTED = 2;
	  PAUSED = 3;
	  RESUMED = 4;
	  FINISHED = 5;
  }

  string id = 1;
  string title = 2;
  google.protobuf.Timestamp base_working_time = 3;
  google.protobuf.Timestamp paused_at = 4;
  State state = 5;
  google.protobuf.Timestamp started_at = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
